Solve overflow issue on about page

--- a/src/authors-info-components/authors-info.scss
+++ b/src/authors-info-components/authors-info.scss
@@ -28,6 +28,7 @@ $low-poly-black: #40383C;
 }
 
 .author-desc{
+ overflow: hidden;
  display: grid;
  grid-template-rows: 10% auto 35%;
  grid-template-columns: 40% 60%;
